Reworking more spacing issues

--- a/src/scss/core/_typography.scss
+++ b/src/scss/core/_typography.scss
@@ -101,11 +101,7 @@ h6 {
 	font-weight: 500;
 	line-height: 1.2;
 	color: $black;
-	margin: $spacing-30 0;
-
-	&:first-child {
-		margin-top: 0;
-	}
+	margin: 30px 0;
 }
 
 h1 {
@@ -119,7 +115,7 @@ h1 {
 
 h2 {
 	font-size: 32px;
-	margin-bottom: 20px;
+	margin-bottom: $spacing-20;
 
 	@include media(">s") {
 		font-size: 36px;
@@ -155,7 +151,8 @@ ol {
 	font-size: 16px;
 	line-height: 1.5;
 	color: $black;
-	margin: 20px 0;
+	// margin: 20px 0;
+	margin-bottom: $spacing-20;
 
 	@include media(">s") {
 		font-size: 18px;
@@ -190,7 +187,7 @@ blockquote {
 	font-weight: 300;
 	font-style: italic;
 	border-left: 4px solid $grey;
-	margin: 0;
+	margin-bottom: $spacing-20;
 	padding: 20px $spacing-40;
 
 	p {
@@ -209,7 +206,7 @@ figure {
 
 video {
 	width: 100%;
-	margin-bottom: 20px;
+	margin-bottom: $spacing-20;
 }
 
 /*
